--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
+    "react-barcode": "^1.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2"
   },
