Agrega dependencia de "serve" y actualiza el script "start" en package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "serve dist --omit=dev",
+    "start": "serve dist -s -n -L -p $PORT",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
