--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.4.0",
     "jspdf": "^2.5.1",
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
