--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "serve": "^14.2.1"
